--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "plugin-team-view-filters",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "flex-plugin pre-script-check"
+    "postinstall": "flex-plugin pre-script-check",
+    "start": "flex-plugin start"
   },
   "dependencies": {
     "react": "16.5.2",
