--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "16.5.2",
     "react-dom": "16.5.2",
     "react-select": "^3.1.0",
-    "flex-plugin-scripts": "4.1.1"
+    "@twilio/flex-plugin-scripts": "5.1.2"
   },
   "devDependencies": {
     "@twilio/flex-ui": "^1",
