--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "flex-plugin start"
   },
   "dependencies": {
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-select": "^3.1.0",
-    "@twilio/flex-plugin-scripts": "5.1.2"
+    "@emotion/styled": "^11.10.0",
+    "@twilio/flex-plugin-scripts": "5.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-emotion": "^10.0.0",
+    "react-select": "^3.1.0"
   },
   "devDependencies": {
-    "@twilio/flex-ui": "^1",
-    "react-test-renderer": "16.5.2"
+    "@twilio/flex-ui": "2.0.0-beta.1",
+    "react-test-renderer": "17.0.2"
   }
 }
